add format to nvme_control, lookup pci address when selecting controller
Signed-off-by: Tom Nabarro <tom.nabarro@intel.com>

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -17,7 +17,7 @@ tasks:
   unit-tests:
     dir: spdk
     cmds:
-      - go test
+      - LD_LIBRARY_PATH=. go test
 
   build-spdk:
     dir: spdk
